meta tag for image added

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta name="keywords" content="Anurag Singh, portfolio, terminal-based, command line, terminal operations, developer information, technology stack, projects, skills">
     <meta name="author" content="Anurag Singh">
     <meta name="theme-color" content="#000000">
-    <!-- <meta property="og:image"
-        content="https://res.cloudinary.com/diroilukd/image/upload/v1679785785/Screenshot_2023-03-26_at_4.38.02_AM_o54o62.png" /> -->
+    <meta property="og:image"
+        content="https://res.cloudinary.com/a123456789/image/upload/v1687292719/portfolio_f66ivq.png" />
     <title>Anurag Singh</title>
     <link rel="stylesheet"  href="styles.css" />
 </head>
